--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Zack Meredith — Designer",
+  "name": "port2k18",
   "description": "port2018",
   "version": "1.0.0",
   "author": "Zack Meredith",
