--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "gatsby-plugin-styled-components": "^2.0.9",
     "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-sharp": "^1.6.22",
+    "lodash": "^4.17.5",
+    "lodash.throttle": "^4.1.1",
     "react-helmet": "^5.2.0",
+    "react-pdf": "^3.0.4",
     "react-typekit": "^1.1.3",
     "styled-components": "^3.2.3",
     "webfontloader": "^1.6.28"
