--- a/package.json
+++ b/package.json
@@ -7,22 +7,28 @@
     "@fortawesome/fontawesome": "^1.1.5",
     "@fortawesome/fontawesome-free-brands": "^5.0.9",
     "@fortawesome/react-fontawesome": "0.0.17",
-    "gatsby": "^1.9.241",
-    "gatsby-image": "^1.0.42",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.9",
-    "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sharp": "^1.6.41",
+    "@mdx-js/mdx": "^0.15.0-1",
+    "@mdx-js/tag": "^0.15.0-1",
+    "gatsby": "next",
+    "gatsby-mdx": "^0.0.5",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sharp": "^1.6.48",
     "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-source-filesystem": "^1.5.27",
-    "gatsby-transformer-sharp": "^1.6.22",
-    "lodash": "^4.17.5",
+    "gatsby-plugin-web-font-loader": "^1.0.3",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-sharp": "^1.6.27",
+    "loader-utils": "^1.1.0",
+    "lodash": "^4.17.10",
     "lodash.throttle": "^4.1.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
-    "react-pdf": "^3.0.4",
+    "react-pdf": "^4.0.0-beta.2",
     "react-typekit": "^1.1.3",
-    "styled-components": "^3.2.5",
-    "webfontloader": "^1.6.28"
+    "styled-components": "^3.3.3"
+  },
+  "resolutions": {
+    "react-pdf/pdfjs-dist": "2.0.550"
   },
   "keywords": [
     "gatsby"
@@ -32,10 +38,14 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js'",
+    "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.11.1"
+    "prettier": "^1.13.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   }
 }
