--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@fortawesome/react-fontawesome": "0.0.17",
     "@mdx-js/mdx": "^0.15.0-1",
     "@mdx-js/tag": "^0.15.0-1",
+    "babel-plugin-styled-components": "^1.5.1",
     "gatsby": "next",
     "gatsby-mdx": "^0.0.5",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sharp": "^1.6.48",
-    "gatsby-plugin-styled-components": "^2.0.11",
+    "gatsby-plugin-styled-components": "^3.0.0-beta.3",
     "gatsby-plugin-web-font-loader": "^1.0.3",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-sharp": "^1.6.27",
